url added to thanks

--- a/machinelearning/machinelearning.tex
+++ b/machinelearning/machinelearning.tex
@@ -37,7 +37,7 @@
 \newtheorem{definition}{Definition}
 
 
-\author{Philipp Wagner\thanks{E-Mail: bytefish--at--gmx--dot--de}}
+\author{Philipp Wagner\thanks{\url{http://www.bytefish.de}, bytefish--at--gmx--dot--de}}
 \title{Statistical Machine Learning with OpenCV}
 %\date{Wintersemester 2010}
 
