--- a/machinelearning/machinelearning.tex
+++ b/machinelearning/machinelearning.tex
@@ -100,6 +100,9 @@ This document is an introduction to Machine Learning with OpenCV. Artificial Neu
 
 \appendix
 
+\section{main.cpp}
+\lstinputlisting[language=C++, caption=main.cpp]{../machinelearning-src/main.cpp}
+
 % bibliography
 \bibliography{bib/machinelearning}
 \bibliographystyle{alphadin}
