Minor fix to the Machine Learning document.

--- a/machinelearning/doc/machinelearning.tex
+++ b/machinelearning/doc/machinelearning.tex
@@ -101,7 +101,7 @@ This document is an introduction to Machine Learning with OpenCV. Artificial Neu
 \appendix
 
 \section{main.cpp}
-\lstinputlisting[language=C++, caption=main.cpp]{../machinelearning-src/main.cpp}
+\lstinputlisting[language=C++, caption=main.cpp]{../main.cpp}
 
 % bibliography
 \bibliography{bib/machinelearning}
