bibliography style changed to acm

--- a/machinelearning/doc/machinelearning.tex
+++ b/machinelearning/doc/machinelearning.tex
@@ -103,6 +103,6 @@ Face Recognition with OpenCV2
 
 % bibliography
 \bibliography{bib/machinelearning}
-\bibliographystyle{alphadin}
+\bibliographystyle{acm}
 
 \end{document}
