--- a/machinelearning/doc/machinelearning.tex
+++ b/machinelearning/doc/machinelearning.tex
@@ -22,7 +22,7 @@
 
 % set the title
 \title{\begin{tabular}{p{11cm}}\centering
-Face Recognition with OpenCV2
+Machine Learning with OpenCV2
 \end{tabular}}
 
 % contact details
